# arcane-engine

./: .gitignore  CMakeLists.txt  README.md
game/: CMakeLists.txt  main.cpp  mainbase.cpp
game/base/: ScriptBase.cpp  ScriptBase.lua  mainbase.cpp
game/scripts/: ScriptBase.cpp
game/src/: main.cpp  structs.cpp
game/src/general/: ComponentManager.cpp  EntityDataComponents.cpp  System.cpp
game/src/graphics/: RenderSystem.cpp  TransformSystem.cpp  model.h  shader.cpp  shader.h
game/src/graphics/shaders/: default-fshader.glsl
src/: constants.cpp  main.cpp  model.h
src/general/: Engine.cpp  EntityDataComponent.cpp  EntityDataComponents.cpp  EntityManager.cpp  GameData.cpp  Script.cpp  Script.h  ScriptBase.cpp  ScriptComponent.cpp  ScriptHelperFunctions.cpp  ScriptHelperFunctions.h  ScriptSystem.cpp  ScriptSystem.h  System.cpp  scene.cpp  scene.h
src/graphics/: Camera.cpp  GraphicsComponents.cpp  RenderSystem.cpp  TransformSystem.cpp  model.cpp  model.h  scene.cpp  scene.h  shader.cpp  shader.h
src/graphics/shaders/: default-vshader.glsl  light-fshader.glsl
